fix issue with bootstrap rows not wrapping correctly

--- a/_scss/componenets/_footer.scss
+++ b/_scss/componenets/_footer.scss
@@ -34,6 +34,7 @@ a.si-facebook {
 a.si-google {
   display: inline-block;
   float: right;
+  margin-right: 20px;
   @media (max-width: $width-md) {
     float: none;
   }
@@ -51,6 +52,29 @@ a.si-google {
   @media (max-width: $width-sm) {
     float: none;
     margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+a.si-yelp {
+  display: inline-block;
+  float: right;
+  margin-right: 20px;
+  @media (max-width: $width-md) {
+    float: none;
+  }
+}
+
+.icon-yelp {
+  color: white;
+  font-size: 25px;
+  width: 37px;
+  text-align: center;
+  border-radius: 8px;
+  //margin-right: 20px;
+  @media (max-width: $width-sm) {
+    float: none;
+    //margin-left: 20px;
     margin-right: auto;
   }
 }
